fix product info font size and image fill width on mobile

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -276,7 +276,7 @@
         padding: 0
         
     .product-details
-      font-size: 16px
+      font-size: 20px
   
     &.image-fill .product-image-background
-      width: 85%
+      width: 100%
